<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/fragment_dashboard"
        android:icon="@drawable/ic_home"
        android:title="@string/beranda"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/fragment_project"
        android:icon="@drawable/ic_my_project"
        android:title="@string/my_project"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/fragment_add_project"
        android:icon="@drawable/ic_add_project"
        android:title="@string/add_project"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/fragment_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>