<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/backbutton"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_20_of_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="Welcome"
        android:src="@drawable/img_registrasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_20_of_top"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline_20_of_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_center_horizontal">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/edittext_rounded_shape"
                    app:boxBackgroundMode="none"
                    app:expandedHintEnabled="false"
                    app:hintEnabled="false"
                    tools:ignore="RtlSymmetry">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="@dimen/small_margin"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="@dimen/small_margin"
                        android:paddingVertical="@dimen/small_margin_md"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/edittext_rounded_shape"
                    app:boxBackgroundMode="none"
                    app:expandedHintEnabled="false"
                    app:hintEnabled="false"
                    tools:ignore="RtlSymmetry">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_user"
                        android:drawablePadding="@dimen/small_margin"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="@dimen/small_margin"
                        android:paddingVertical="@dimen/small_margin_md"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--                <RelativeLayout-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_gravity="center"-->
                <!--                    android:layout_marginTop="@dimen/small_margin"-->
                <!--                    android:background="@drawable/edittext_rounded_shape"-->
                <!--                    android:gravity="center"-->
                <!--                    android:paddingHorizontal="@dimen/small_margin">-->

                <!--                    <ImageView-->
                <!--                        android:id="@+id/img_role"-->
                <!--                        android:layout_width="30dp"-->
                <!--                        android:layout_height="30dp"-->
                <!--                        android:layout_alignParentStart="true"-->
                <!--                        android:layout_alignParentTop="true"-->
                <!--                        android:layout_alignParentBottom="true"-->
                <!--                        android:layout_centerInParent="true"-->
                <!--                        android:contentDescription="@string/role"-->
                <!--                        android:src="@drawable/ic_role" />-->

                <!--                    <Spinner-->
                <!--                        android:layout_width="match_parent"-->
                <!--                        android:layout_height="match_parent"-->
                <!--                        android:layout_toStartOf="@+id/img_spin"-->
                <!--                        android:layout_toEndOf="@+id/img_role"-->
                <!--                        android:background="@android:color/transparent"-->
                <!--                        android:drawSelectorOnTop="true"-->
                <!--                        android:entries="@array/roles"-->
                <!--                        android:paddingVertical="@dimen/small_margin_md" />-->

                <!--                    <ImageView-->
                <!--                        android:id="@+id/img_spin"-->
                <!--                        android:layout_width="25dp"-->
                <!--                        android:layout_height="25dp"-->
                <!--                        android:layout_alignParentTop="true"-->
                <!--                        android:layout_alignParentEnd="true"-->
                <!--                        android:layout_alignParentBottom="true"-->
                <!--                        android:layout_centerInParent="true"-->
                <!--                        android:contentDescription="@string/role"-->
                <!--                        android:src="@drawable/ic_dropdown" />-->

                <!--                </RelativeLayout>-->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/edittext_rounded_shape"
                    app:boxBackgroundMode="none"
                    app:expandedHintEnabled="false"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_role"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:cursorVisible="false"
                        android:drawableStart="@drawable/ic_role"
                        android:drawableEnd="@drawable/ic_dropdown"
                        android:drawablePadding="@dimen/small_margin"
                        android:focusable="false"
                        android:hint="@string/role"
                        android:paddingHorizontal="@dimen/small_margin"
                        android:paddingVertical="@dimen/small_margin_md"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/edittext_rounded_shape"
                    app:boxBackgroundMode="none"
                    app:endIconDrawable="@drawable/password_visibility_selector"
                    app:endIconMode="password_toggle"
                    app:expandedHintEnabled="false"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_pw"
                        android:drawablePadding="@dimen/small_margin"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingHorizontal="@dimen/small_margin"
                        android:paddingVertical="@dimen/small_margin_md"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_password_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@drawable/edittext_rounded_shape"
                    app:boxBackgroundMode="none"
                    app:endIconDrawable="@drawable/password_visibility_selector"
                    app:endIconMode="password_toggle"
                    app:expandedHintEnabled="false"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password_confirmation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_pw"
                        android:drawablePadding="@dimen/small_margin"
                        android:hint="@string/confirmation_password"
                        android:inputType="textPassword"
                        android:paddingHorizontal="@dimen/small_margin"
                        android:paddingVertical="@dimen/small_margin_md"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color" />

                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/cb_agree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin"
                    android:button="@drawable/checkbox_selector"
                    android:paddingStart="@dimen/small_margin"
                    android:text="@string/saya_menyetujui_syarat_dan_ketentuan"
                    android:textColor="@color/white"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/btn_daftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/daftar"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_20_of_bottom" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_20_of_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_20_of_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />


</androidx.constraintlayout.widget.ConstraintLayout>